--- a/family.html
+++ b/family.html
@@ -32,7 +32,9 @@
 			<img src = "images/jewel_cave.jpg" width="25" alt = "A boy and two girls in front of the sign of Jewel Cave National Monument">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.<p>
 	</main>
+	<footer>
 	Colleen van Lent &copy; 2024
+	</footer>
 </body>
 </html>
 
