--- a/family.html
+++ b/family.html
@@ -29,7 +29,7 @@
 			<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls in front of the sign of Ben Reifel Visitor Center, Badlands National Park">
 			<img src = "images/falling.jpg" width="25" alt = "A boy clinging to a rock, seemingly at the risk of falling down">
 			<img src = "images/rushmore.jpg" width="1000" alt = "Shot of Mount Rushmore">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "A boy and two girls in front of the sign of Jewel Cave National Monument">
+			<img src = "images/jewel_cave.JPG" width="25" alt = "A boy and two girls in front of the sign of Jewel Cave National Monument">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.<p>
 	</main>
 	<footer>
